fix z-index on settings popup

--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -157,11 +157,11 @@
     position: fixed;
     top: 0px;
     left: 0px;
+    z-index: 2;
 }
 
 .openSettingsBtn {
     position: absolute;
-    z-index: 1;
     right: 0;
     color: grey;
     font-size: 20px;
